# qw3n-face

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.py
app/: config.py
app/audio/: personas.py  transcribe.py  tts.py
app/ui/: batch.py  custom_voice.py  events.py  layout.py  personas.py  voice_clone.py  voice_design.py
